--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,12 @@
 /*sample font*/
-a {
-    font-family: 'Great Vibes', cursive;
-    font-size: 25px;
-}
-
 h5 {
     font-family: 'Great Vibes', cursive;
     font-size: 80px;
+}
+
+.logo {
+    width: 150px;
+    height: auto;
 }
 
 h1 {
@@ -44,3 +44,18 @@ p {
     position: relative;
  }
 
+.content-footer {
+    margin-top: 2%;
+    text-align: center;
+    background-color: darkgreen;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.boxes{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+ }
+ 
